# cars-edge-detection-plugin

./: .gitignore  .gitlab-ci.yml  .gitmodules  .version.sh  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  pyproject.toml  pytest.ini  setup.py
cars_edge_detection_plugin/: __init__.py  download_models.py
cars_edge_detection_plugin/applications/: __init__.py
cars_edge_detection_plugin/applications/depth_map_generation/: __init__.py  abstract_depth_map_generation_app.py  moge2_depth_generation.py  moge2_depth_generation_tools.py  moge2_wrapper.py
cars_edge_detection_plugin/pipelines/: __init__.py
cars_edge_detection_plugin/pipelines/edge_detection/: __init__.py  edge_detection_pipeline.py
tests/: __init__.py  helpers.py  test_end2end.py
tests/applications/depth_map_generation/: test_moge2_depth_generation_tools.py  test_moge2_wrapper.py
tests/data/ref_output/data_gizeh_crop/: end2end_gizeh_crop_depth.tif  end2end_gizeh_crop_edges.tif  end2end_gizeh_crop_normals.tif  end2end_gizeh_crop_tile_id.tif
