# pyproject.toml
[build-system]
requires = [
    "numpy>=1.17.0,<2.0.0",
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]


# enable setuptools_scm version
[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
include = ["cars_edge_detection_plugin*"]
exclude = ["tests*"]
namespaces = false


# package setup main metadata
[project]
name = "cars_edge_detection_plugin"
dynamic = ["version"]
authors = [{ name = "CNES", email = "cars@cnes.fr" }]
description = "Cars plugin to use the MoGe2 model for edge detection"
readme = "README.md"
# license = "Apache License 2.0"
# license-files = ["LICENSE"]
keywords = ["cars", "3D", "DEM", "pandora", "photogrammetry", "moge2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">= 3.9"
# cars packages dependencies
dependencies = [
    "numpy>=1.17.0,<2.0.0",
    "rasterio>=1.3.0",
    "MoGe @ git+https://github.com/microsoft/MoGe.git",
    "huggingface-hub",
    "torch",
    "xarray",
    "json_checker"
]

[project.urls]
Documentation = "https://cars.readthedocs.io/en/latest/"

[project.optional-dependencies]
# [dev] mode dependencies: include notebook and doc
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "isort>=5.8.0",                   # Check imports
    "black>=24.1a1",                  # PEP8 format code
    "flake8>=3.9.1",                  # General linter
    "flake8-pyproject",               # Support configuration in pyproject.toml
    "flake8-comprehensions>=3.4.0",   # Check list/dict/set
    "flake8-bugbear>=21.4.3,<24.0.0", # Add some rules to flake8
    "jupyter_contrib_nbextensions",   # Clean notebooks
    "pylint>=2.8.12,<3.0.0",          # General linter with more rules
    "setuptools_scm",                 # version from git tag
    "virtualenv",
    "configupdater",
    "build",                          # for cars build
]

cars = [
    "cars>=1.0a0,<1.1"
]


[tool.black]
# https://github.com/psf/black
line-length = 80
exclude = "(.eggs|.git|.mypy_cache|.nox|.tox|_build|build|dist|venv)"

[tool.isort]
profile = 'black'
line_length = 80
known_third_party = [ "dask" ]

[tool.flake8]
exclude = [".git", "venv", "build", "dist", "tests/test_output"]
extend-ignore = ["E203", "W503"]
max-complexity = 15
max-line-length = 80
select = ["E", "F", "W", "C", "B9", "C4", "B"]

# Specify no universal wheel supported (only Python3)
[tool.wheel]
universal = false

# entry points
[project.entry-points."cars.plugins"]
plugin = "cars_edge_detection_plugin"

# entry points cli scripts
[project.scripts]
cars-download-moge2 = "cars_edge_detection_plugin.download_models:main"

[tool.cibuildwheel]
skip = ["pp*", "*-win32"]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
